--- a/index.html
+++ b/index.html
@@ -313,6 +313,31 @@
                         <tbody>
                           <tr>
                             <td class="v-container-padding-padding"
+                              style="overflow-wrap:break-word;word-break:break-word;font-family:'Open Sans',sans-serif;"
+                              align="left">
+                              <img border="0" width="600"
+                                style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;"
+                                src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/logo.jpg" alt="logo">
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                      <table width="100%" cellpadding="0" cellspacing="0" border="0">
+                        <tr>
+                          <td class="v-text-align" style="padding-right: 0px;padding-left: 0px;" align="center">
+                            <img align="center" border="0"
+                              src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-9.png" alt="image"
+                              title="image"
+                              style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 600px;"
+                              width="600" />
+                          </td>
+                        </tr>
+                      </table>
+                      <table id="u_content_heading_1" style="font-family:'Open Sans',sans-serif;" role="presentation"
+                        cellpadding="0" cellspacing="0" width="100%" border="0">
+                        <tbody>
+                          <tr>
+                            <td class="v-container-padding-padding"
                               style="overflow-wrap:break-word;word-break:break-word;padding:10px 5px;font-family:'Open Sans',sans-serif;"
                               align="left">
                               <h1 class="v-text-align v-font-size"
@@ -610,7 +635,9 @@
                                   <tr>
                                     <td class="v-text-align" style="padding-right: 0px;padding-left: 0px;"
                                       align="right">
-                                      <img align="right" border="0" src="images/image-2.png" alt="image" title="image"
+                                      <img align="right" border="0"
+                                        src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-2.png"
+                                        alt="image" title="image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 22%;max-width: 37.4px;"
                                         width="37.4" />
                                     </td>
@@ -818,7 +845,9 @@
                                   <tr>
                                     <td class="v-text-align" style="padding-right: 0px;padding-left: 0px;" align="left">
 
-                                      <img align="left" border="0" src="images/image-4.png" alt="image" title="image"
+                                      <img align="left" border="0"
+                                        src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-4.png"
+                                        alt="image" title="image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 25%;max-width: 42.5px;"
                                         width="42.5" />
 
@@ -878,7 +907,9 @@
                                     <td class="v-text-align" style="padding-right: 0px;padding-left: 0px;"
                                       align="center">
 
-                                      <img align="center" border="0" src="images/image-7.png" alt="image" title="image"
+                                      <img align="center" border="0"
+                                        src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-7.png"
+                                        alt="image" title="image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 20%;max-width: 36px;"
                                         width="36" />
 
@@ -919,7 +950,9 @@
                                     <td class="v-text-align" style="padding-right: 0px;padding-left: 0px;"
                                       align="right">
 
-                                      <img align="right" border="0" src="images/image-2.png" alt="image" title="image"
+                                      <img align="right" border="0"
+                                        src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-2.png"
+                                        alt="image" title="image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 22%;max-width: 37.4px;"
                                         width="37.4" />
 
@@ -987,7 +1020,9 @@
                                     <td class="v-text-align" style="padding-right: 0px;padding-left: 0px;"
                                       align="center">
 
-                                      <img align="center" border="0" src="images/image-9.png" alt="image" title="image"
+                                      <img align="center" border="0"
+                                        src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-9.png"
+                                        alt="image" title="image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 600px;"
                                         width="600" />
 
@@ -1010,8 +1045,8 @@
 
                                 <div class="v-text-align v-font-size"
                                   style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">
-                                  <p style="line-height: 140%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                  <p style="line-height: 140%;">One Platform, All Travel Solutions. Connect Business
+                                    Bring Success.</p>
                                 </div>
 
                               </td>
@@ -1028,15 +1063,13 @@
                                 align="left">
 
                                 <div class="v-text-align" align="center">
-                                  <a href="https://www.unlayer.com" target="_blank"
+                                  <a href="https://b2b.nztrip.co" target="_blank"
                                     class="v-button v-size-width v-font-size"
                                     style="box-sizing: border-box;display: inline-block;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #0000aa; border-radius: 4px;-webkit-border-radius: 4px; -moz-border-radius: 4px; width:28%; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word;font-size: 14px;">
                                     <span style="display:block;padding:10px 20px;line-height:120%;"><span
                                         style="line-height: 16.8px;">Visit Website</span></span>
                                   </a>
-
                                 </div>
-
                               </td>
                             </tr>
                           </tbody>
@@ -1087,8 +1120,11 @@
                                         <tr style="vertical-align: top">
                                           <td align="left" valign="middle"
                                             style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
-                                            <a href="https://www.facebook.com/unlayer" title="Facebook" target="_blank">
-                                              <img src="images/image-1.png" alt="Facebook" title="Facebook" width="32"
+                                            <a href="https://www.facebook.com/nztrip.co" title="Facebook"
+                                              target="_blank">
+                                              <img
+                                                src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-1.png"
+                                                alt="Facebook" title="Facebook" width="32"
                                                 style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
                                             </a>
                                           </td>
@@ -1104,7 +1140,9 @@
                                           <td align="left" valign="middle"
                                             style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
                                             <a href="https://twitter.com/unlayerapp" title="Twitter" target="_blank">
-                                              <img src="images/image-3.png" alt="Twitter" title="Twitter" width="32"
+                                              <img
+                                                src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-3.png"
+                                                alt="Twitter" title="Twitter" width="32"
                                                 style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
                                             </a>
                                           </td>
@@ -1121,7 +1159,9 @@
                                             style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
                                             <a href="https://www.linkedin.com/company/unlayer/mycompany/"
                                               title="LinkedIn" target="_blank">
-                                              <img src="images/image-6.png" alt="LinkedIn" title="LinkedIn" width="32"
+                                              <img
+                                                src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-6.png"
+                                                alt="LinkedIn" title="LinkedIn" width="32"
                                                 style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
                                             </a>
                                           </td>
@@ -1138,17 +1178,15 @@
                                             style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
                                             <a href="https://www.instagram.com/unlayer_official/" title="Instagram"
                                               target="_blank">
-                                              <img src="images/image-5.png" alt="Instagram" title="Instagram" width="32"
+                                              <img
+                                                src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-5.png"
+                                                alt="Instagram" title="Instagram" width="32"
                                                 style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
                                             </a>
                                           </td>
                                         </tr>
                                       </tbody>
                                     </table>
-
-
-
-
                                   </div>
                                 </div>
 
@@ -1170,8 +1208,6 @@
                                   <p style="font-size: 14px; line-height: 170%;">UNSUBSCRIBE   |   PRIVACY POLICY   |  
                                     WEB</p>
                                   <p style="font-size: 14px; line-height: 170%;"> </p>
-                                  <p style="font-size: 14px; line-height: 170%;">Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
                                 </div>
 
                               </td>
