--- a/index.html
+++ b/index.html
@@ -322,17 +322,6 @@
                           </tr>
                         </tbody>
                       </table>
-                      <table width="100%" cellpadding="0" cellspacing="0" border="0">
-                        <tr>
-                          <td class="v-text-align" style="padding-right: 0px;padding-left: 0px;" align="center">
-                            <img align="center" border="0"
-                              src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-9.png" alt="image"
-                              title="image"
-                              style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 600px;"
-                              width="600" />
-                          </td>
-                        </tr>
-                      </table>
                       <table id="u_content_heading_1" style="font-family:'Open Sans',sans-serif;" role="presentation"
                         cellpadding="0" cellspacing="0" width="100%" border="0">
                         <tbody>
@@ -341,7 +330,7 @@
                               style="overflow-wrap:break-word;word-break:break-word;padding:10px 5px;font-family:'Open Sans',sans-serif;"
                               align="left">
                               <h1 class="v-text-align v-font-size"
-                                style="margin: 0px; color: #0000aa; line-height: 140%; text-align: center; word-wrap: break-word; font-size: 26px; font-weight: 400;">
+                                style="margin: 0px; color: #0000aa; line-height: 140%; text-align: center; word-wrap: break-word; font-size: 30px; font-weight: 400;">
                                 <strong>Attention!<br />Your Flight Date has been Changed</strong>
                               </h1>
                             </td>
@@ -1139,7 +1128,7 @@
                                         <tr style="vertical-align: top">
                                           <td align="left" valign="middle"
                                             style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
-                                            <a href="https://twitter.com/unlayerapp" title="Twitter" target="_blank">
+                                            <a href="https://twitter.com/nztrip" title="Twitter" target="_blank">
                                               <img
                                                 src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-3.png"
                                                 alt="Twitter" title="Twitter" width="32"
@@ -1157,7 +1146,7 @@
                                         <tr style="vertical-align: top">
                                           <td align="left" valign="middle"
                                             style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
-                                            <a href="https://www.linkedin.com/company/unlayer/mycompany/"
+                                            <a href="https://www.linkedin.com/company/nztrip/mycompany/"
                                               title="LinkedIn" target="_blank">
                                               <img
                                                 src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-6.png"
@@ -1176,7 +1165,7 @@
                                         <tr style="vertical-align: top">
                                           <td align="left" valign="middle"
                                             style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
-                                            <a href="https://www.instagram.com/unlayer_official/" title="Instagram"
+                                            <a href="https://www.instagram.com/nztrip" title="Instagram"
                                               target="_blank">
                                               <img
                                                 src="https://s3.ap-southeast-1.amazonaws.com/cdn.nztrip.co/Icons/image-5.png"
